--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "embla-carousel-react": "^8.5.2",
     "geist": "^1.3.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.471.0",
+    "lucide-react": "^0.471.1",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
@@ -77,6 +77,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
